# feature-oriented-git-mod

./: .gitignore  .pylintrc  README.md  git-feature.1  git-feature.html  git_fast_import_data.txt  pyproject.toml  requirements.dev.txt  requirements.txt
git_tool/: __main__.py  finding_features.py  git_tool_ci.py  init_hooks.py  patch_feature_mapper.py
git_tool/ci/: compare_branches.py  fact_for_commit.py  feature_commands.py  main.py
git_tool/ci/subcommands/: feature_add.py  feature_add_from_staged.py  feature_blame.py  feature_commit.py  feature_commit_msg.py  feature_commits.py  feature_info.py  feature_info_all.py  feature_pre_commit.py  feature_status.py
git_tool/config/: apply_config.py  parse_and_validate.py
git_tool/feature_data/: __init__.py  add_data.py  branch_switching.py  fact_model.py  fast_import_utils.py  feature_utils.py  file_based_git_info.py  git_helper.py  git_status_per_feature.py  parse_data.py  repo_context.py  utils.py
git_tool/feature_data/add_feature_data/: add_data.py
git_tool/feature_data/analyze_feature_data/: feature_set_computation.py  feature_utils.py  utils.py
git_tool/feature_data/models_and_context/: fact_model.py  feature_state.py  repo_context.py
git_tool/feature_data/read_feature_data/: parse_data.py
git_tool/feature_data/utils/: fast_import_utils.py
git_tool/git_utils/: commit_creation.py
git_tool/helpdoc/: git-feature.html  install_help.py
git_tool/hooks/: last_commit.py  post-commit  pre-commit  pre_commit_feature_info.sh  prepare-commit-msg
git_tool/scripts_for_experiment/: set_hooks_path.py
hooks/: pre-commit  prepare-commit-msg
src/: main.py
test/: conftest.py  test_finding_features.py
test/fixtures/: git_test_repo.py
